Add footer and edit

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.cdnfonts.com/css/iranian-sans');
+.hoverItem {
+  display: block;
+  position: relative;
+}
+
+.hoverItem:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--red);
+  transform-origin: bottom right;
+  transition: transform 0.4s ease-out;
+}
+
+.hoverItem:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
