--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.cdnfonts.com/css/iranian-sans');
+@font-face {font-family: "IRANSans";
+  src: url("./assets/fonts/IRANSans/@font-face/3967f8bfcdf02e2b966e2f252738ddca.eot"); /* IE9*/
+  src: url("./assets/fonts/IRANSans/@font-face/3967f8bfcdf02e2b966e2f252738ddca.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+  url("./assets/fonts/IRANSans/@font-face/3967f8bfcdf02e2b966e2f252738ddca.woff2") format("woff2"), /* chrome、firefox */
+  url("./assets/fonts/IRANSans/@font-face/3967f8bfcdf02e2b966e2f252738ddca.woff") format("woff"), /* chrome、firefox */
+  url("./assets/fonts/IRANSans/@font-face/3967f8bfcdf02e2b966e2f252738ddca.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url("./assets/fonts/IRANSans/@font-face/3967f8bfcdf02e2b966e2f252738ddca.svg#IRANSans") format("svg"); /* iOS 4.1- */
+}
+body{
+  direction: rtl;
+  font-family : IRANSans;
+  font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+}
 .hoverItem {
   display: block;
   position: relative;
