--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,12 @@ body{
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
+    background-image: url("./assets/images/bg-body.jpeg");
+    height: 100%;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .hoverItem {
   display: block;
